Fix header spacings

--- a/default_style.css
+++ b/default_style.css
@@ -17,18 +17,19 @@ header {
 	width: 100%;
 }
 
+.title {
+	margin: 32px
+}
+
 .title-img{
-	margin: 20px 20px;
+	margin: 0 10px 0 10px;
 	height: 100px;
 	width: 100px;
 }
 
 .page-title {
 	display: inline;
-}
-
-.topnav-wrapper {
-	padding-top: 32px;
+	margin: 10px 10px;
 }
 
 .topnav {
